@@ -14,9 +14,11 @@ export(dev.sizec)
 export(evalc)
 export(exit)
 export(has.sodium)
+export(help)
 export(is.secure)
 export(lsc)
 export(relay)
+export(rhelp)
 export(rmc)
 export(rpng)
 export(rpng.new)
@@ -43,6 +45,7 @@ importFrom(graphics,rasterImage)
 importFrom(pbdZMQ,zmq)
 importFrom(png,readPNG)
 importFrom(stats,runif)
+importFrom(tools,Rd2txt)
 importFrom(tools,file_path_as_absolute)
 importFrom(utils,capture.output)
 importFrom(utils,globalVariables)
