@@ -14,7 +14,7 @@
 #' 
 #' @importFrom stats runif
 #' @importFrom utils capture.output globalVariables packageVersion
-#' @importFrom tools file_path_as_absolute
+#' @importFrom tools file_path_as_absolute Rd2txt
 #' @importFrom getPass getPass
 #' @importFrom grDevices dev.cur dev.list dev.next dev.prev dev.off dev.set
 #'             dev.new dev.size png as.raster
